[metadata]
name = hear
version = 0.1.16
url = https://github.com/otosense/omisc
platforms = any
description_file = README.md
root_url = https://github.com/otosense/
license = apache-2.0
author = OtoSense
description = https://github.com/otosense/hear
long_description = file:README.md
long_description_content_type = text/markdown
keywords =
display_name = hear


[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    atypes
	dol
    recode
	stream2py
    taped
    i2
